version/0.30/_sources/api/solver/_autosummary/settings/list_properties_1.rst.txt
:orphan:

.. _list_properties_1:

list_properties
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.list_properties_1
    :show-inheritance:

.. rubric:: Arguments

============================   ===========================

Argument                                           Summary

============================   ===========================
:ref:`object_at <object_at>`       Object index to delete.

============================   ===========================

.. rubric:: Included in:

========================================================================================   ==========================================================================

Parent                                                                                                                                                        Summary

========================================================================================   ==========================================================================
:ref:`expert <expert>`                                                                                                                Expert options in Park's model.

:ref:`data_points <data_points>`                                                                                     Ranges and values for piecewise-linear property.

:ref:`contact_resis <contact_resis>`                                                                                                      Contact Resistance Regions.

:ref:`internal_resistance_table <internal_resistance_table>`                                                             Internal resistance table in the NTGK model.

:ref:`limit_current_table <limit_current_table>`                                                                               Current limit table in the NTGK model.

:ref:`fast_charging_table <fast_charging_table>`                                                                                                 Fast charging table.

:ref:`contact_resistance <contact_resistance>`                                                                                            Contact resistance regions.

:ref:`test_data_sets <test_data_sets>`                                                                                                         Define test data sets.

:ref:`translation_rotation_matrix <translation_rotation_matrix>`                                  Data class to hold translation-rotation-matrix in the pack builder.

:ref:`user_defined_coupling_variables_via_udm <user_defined_coupling_variables_via_udm>`                             'user_defined_coupling_variables_via_udm' child.

:ref:`tortuosity_interface <tortuosity_interface>`                                                                                 Setup tortuosity zones and values.

:ref:`pore_size_interface <pore_size_interface>`                                                                        Setup Knudsen diffusion zones and pore sizes.

:ref:`conductive_regions <conductive_regions>`                                                                             Setup conducting zones and conductivities.

:ref:`contact_resistance_regions <contact_resistance_regions>`                                                                 Setup contact surfaces and resistance.

:ref:`range <range>`                                                                                                                   Piecewise-polynomial settings.

:ref:`reference_frame_velocity <reference_frame_velocity>`                                                                       Reference frame velocity components.

:ref:`reference_frame_axis_origin <reference_frame_axis_origin>`                                                              Reference frame axis origin components.

:ref:`reference_frame_axis_direction <reference_frame_axis_direction>`                                                     Reference frame axis direction components.

:ref:`moving_mesh_velocity <moving_mesh_velocity>`                                                                                   Moving mesh velocity components.

:ref:`moving_mesh_axis_origin <moving_mesh_axis_origin>`                                                                          Moving mesh axis origin components.

:ref:`moving_mesh_axis_direction <moving_mesh_axis_direction>`                                                                 Moving mesh axis direction components.

:ref:`direction_1_vector <direction_1_vector>`                                                                                         Direction 1 vector components.

:ref:`direction_2_vector <direction_2_vector>`                                                                                         Direction 2 vector components.

:ref:`cone_axis_vector <cone_axis_vector>`                                                                                               Cone axis vector components.

:ref:`point_on_cone_axis <point_on_cone_axis>`                                                                                         Point on cone axis components.

:ref:`viscous_resistance <viscous_resistance>`                                                                                         Viscous resistance components.

:ref:`inertial_resistance <inertial_resistance>`                                                                                      Inertial resistance components.

:ref:`fan_origin <fan_origin>`                                                                                                                 Fan origin components.

:ref:`terms_child <terms_child>`                                                                                                        'child_object_type' of terms.

:ref:`beach_dir_list <beach_dir_list>`                                                                                                Multi-Directional Beach Inputs.

:ref:`axis_direction_1 <axis_direction_1>`                                                                                                 Axis direction components.

:ref:`axis_origin_1 <axis_origin_1>`                                                                                                          Axis origin components.

:ref:`solid_motion_axis_direction <solid_motion_axis_direction>`                                                              Solid motion axis direction components.

:ref:`solid_motion_axis_origin <solid_motion_axis_origin>`                                                                       Solid motion axis origin components.

:ref:`solid_motion_velocity <solid_motion_velocity>`                                                                                Solid motion velocity components.

:ref:`flow_direction <flow_direction>`                                                                                                     Flow direction components.

:ref:`axis_direction_2 <axis_direction_2>`                                                                                                 Axis direction components.

:ref:`axis_origin_2 <axis_origin_2>`                                                                                                          Axis origin components.

:ref:`real_pole_series <real_pole_series>`                                                                                                  List of Real Pole Series.

:ref:`complex_pole_series <complex_pole_series>`                                                                                         List of Complex Pole Series.

:ref:`radial_direction <radial_direction>`                                                                                               Radial direction components.

:ref:`fan_axis <fan_axis>`                                                                                                                 Axis direction components.

:ref:`fan_origin_1 <fan_origin_1>`                                                                                                            Axis origin components.

:ref:`direction_vector <direction_vector>`                                                                                               Direction vector components.

:ref:`axis_direction_3 <axis_direction_3>`                                                                                                        Help not available.

:ref:`axis_origin_3 <axis_origin_3>`                                                                                                              Help not available.

:ref:`shift_component <shift_component>`                                                                                                          Help not available.

:ref:`velocity_components <velocity_components>`                                                                                                 Velocity components.

:ref:`flow_velocity <flow_velocity>`                                                                                                        Wave velocity components.

:ref:`moving_object_direction <moving_object_direction>`                                                                          Moving object direction components.

:ref:`secondary_phase_direction <secondary_phase_direction>`                                                                    Secondary phase direction components.

:ref:`primary_phase_direction <primary_phase_direction>`                                                                          Primary phase direction components.

:ref:`reference_direction <reference_direction>`                                                                                      Reference direction components.

:ref:`wave_group_inputs <wave_group_inputs>`                                                                                               List of Wave Group Inputs.

:ref:`shallow_wave_inputs <shallow_wave_inputs>`                                                                                         List of Shallow Wave Inputs.

:ref:`pb_disc_components <pb_disc_components>`                                                                                            'pb_disc_components' child.

:ref:`rotation_axis_origin <rotation_axis_origin>`                                                                                   Rotation axis origin components.

:ref:`rotation_axis_direction <rotation_axis_direction>`                                                                          Rotation axis direction components.

:ref:`direction_2 <direction_2>`                                                                                                         Wall translation components.

:ref:`periodic_displacement <periodic_displacement>`                                                                                Periodic displacement components.

:ref:`periodic_imaginary_displacement <periodic_imaginary_displacement>`                                                  Periodic imaginary displacement components.

:ref:`shear_stress <shear_stress>`                                                                                                           Shear stress components.

:ref:`conduction_layers <conduction_layers>`                                                                                               List of Conduction Layers.

:ref:`thin_wall <thin_wall>`                                                                                                                        Conduction Layer.

:ref:`polar_data_pairs <polar_data_pairs>`                                                                                                          Polar data pairs.

:ref:`reference_direction_1 <reference_direction_1>`                                                                                  Radiation direction components.

:ref:`film_velocity <film_velocity>`                                                                                                        Film velocity components.

:ref:`flux_momentum <flux_momentum>`                                                                                                        Flux momentum components.

:ref:`momentum_source <momentum_source>`                                                                                                  Momentum source components.

:ref:`injection_1 <injection_1>`                                                                                                                   'injection' child.

:ref:`injection_hole <injection_hole>`                                                                                                        'injection_hole' child.

:ref:`dynamic_injection <dynamic_injection>`                                                                                               'dynamic_injection' child.

:ref:`static_injection <static_injection>`                                                                                                  'static_injection' child.

:ref:`multi_stage <multi_stage>`                                                                                                         Multi-stage settings object.

:ref:`curves <curves>`                                                                                                                         Parameters for curves.

:ref:`modifications <modifications>`                                                                                                           'modifications' child.

:ref:`lines <lines>`                                                                                                                                   'lines' child.

:ref:`markers <markers>`                                                                                                                             'markers' child.

:ref:`settings_30 <settings_30>`                                                                         Provide custom transparency ranges and values for filtering.

:ref:`settings_31 <settings_31>`                                                                        Provide options for isovalue(s) to highlight inside a volume.

:ref:`settings_32 <settings_32>`                                                                                                     Provide clip box(es) attributes.

:ref:`settings_33 <settings_33>`                                                                                                   Provide clip sphere(s) attributes.

:ref:`lights <lights>`                                                                                                                                'lights' child.

:ref:`entries <entries>`                                                                       List of observables and coefficients for linear combination of powers.

:ref:`invariant_expert_controls <invariant_expert_controls>`                                                                  Advanced settings for invariant motion.

:ref:`parameters_6 <parameters_6>`                                                                                                     Operating condition parameter.

:ref:`conditions_2 <conditions_2>`                                                                                                              Operating conditions.

:ref:`objectives_3 <objectives_3>`                                                                                 Objectives with various parameters and conditions.

:ref:`neural_network_topology <neural_network_topology>`                                                     The number of neural network nodes at each hidden layer.

:ref:`partition_origin_vector <partition_origin_vector>`                                                                             'partition_origin_vector' child.

========================================================================================   ==========================================================================

